--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,27 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "illuminate/html": "^5.0",
-        "barryvdh/laravel-debugbar": "^2.0",
         "intervention/image": "^2.3",
         "messagebird/php-rest-api": "1.2.x",
         "yajra/laravel-datatables-oracle": "~5.0",
         "maatwebsite/excel": "~2.0.0",
         "barryvdh/laravel-dompdf": "0.6.*",
-        "gloudemans/shoppingcart": "~1.3"
+        "gloudemans/shoppingcart": "~1.3",
+
+        "infyomlabs/laravel-generator": "5.1.x-dev",
+        "laravelcollective/html": "5.1.*",
+        "infyomlabs/adminlte-templates": "5.1.x-dev",
+        "infyomlabs/swagger-generator": "dev-master",
+        "jlapp/swaggervel": "dev-master",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "barryvdh/laravel-ide-helper": "^2.2",
+        "barryvdh/laravel-debugbar": "^2.3"
     },
     "autoload": {
         "classmap": [
