--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
+        "orangehill/iseed": "dev-master",
         "barryvdh/laravel-ide-helper": "^2.2",
         "barryvdh/laravel-debugbar": "^2.3"
     },
